@@ -2,6 +2,7 @@
 
    * scripts/extract-partitions.py: refactored much of the processing into
    generators
+   * tests/test_scripts.py: added test
 
 2015-02-16  Titus Brown  <titus@idyll.org>
 2016-05-11  Titus Brown  <titus@idyll.org>
